Add initial validation for academic articles